Prevent arbitrary file writes with malicious resource names.