@@ -18,15 +18,8 @@ package brut.directory;
 
 import org.jetbrains.annotations.NotNull;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
+import java.io.*;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 
@@ -38,7 +31,7 @@ public class FileDirectory extends AbstractDirectory {
     }
 
     public FileDirectory(String dir) throws DirectoryException, UnsupportedEncodingException {
-        this(new File(URLDecoder.decode(dir, StandardCharsets.UTF_8)));
+        this(new File(URLDecoder.decode(dir, "UTF-8")));
     }
 
     public FileDirectory(@NotNull File dir) throws DirectoryException {
